--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "cakephp/localized": "3.*.*",
         "cakephp/migrations": "^2.0.0",
         "cakephp/plugin-installer": "^1.3",
+        "friendsofcake/cakephp-csvview": "3.*",
         "mobiledetect/mobiledetectlib": "2.*"
     },
     "require-dev": {
